[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chaosdata"
version = "0.1.0"
description = "Python SDK for chaos-data: chaos testing for data pipelines"
requires-python = ">=3.10"
license = {text = "Elastic License 2.0"}

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
